# MIGC-diffusers

./: .gitignore  README.md  demo.py  pyproject.toml
src/: migc_archs.py  migc_layers.py  migc_utils.py  pipeline_stable_diffusion_migc.py  utils_layout.py
