[project]
name = "migc-adapter-diffusers"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers==0.35.1",
    "einops>=0.8.1",
    "huggingface-hub==0.34.4",
    "matplotlib>=3.10.6",
    "numpy==2.3.2",
    "torch==2.7.1",
    "transformers==4.56.1",
]


[tool.ruff]
line-length = 120
target-version = "py312"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
